// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExtractorRegistry returns error result from extractor 1`] = `[]`;

exports[`ExtractorRegistry returns external URLs if enabled by config 1`] = `
[
  {
    "format": "unknown",
    "isExternal": true,
    "label": "mixdrop.ag",
    "meta": {
      "countryCodes": [],
    },
    "sourceId": "external_",
    "ttl": 21600000,
    "url": "https://mixdrop.ag/e/3nzwveprim63or6",
  },
]
`;

exports[`ExtractorRegistry returns external url for error 1`] = `
[
  {
    "error": [Error: Fetcher error: 403: Forbidden
],
    "format": "unknown",
    "isExternal": true,
    "label": "Dropload",
    "meta": {
      "countryCodes": [],
    },
    "sourceId": "dropload",
    "url": "https://dropload.io/mocked-blocked.html",
  },
]
`;
